clickable="true" 다 넣음

--- a/app/src/main/res/layout/fragment_community2.xml
+++ b/app/src/main/res/layout/fragment_community2.xml
@@ -6,8 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragmentHome.FragmentHome1"
     android:background="@color/white"
+    android:clickable="true"
     android:padding="20dp">
     <ImageButton
+        android:id="@+id/community2_write_btn"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:src="@drawable/writeedit"
