--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -73,6 +73,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
             <EditText
+                android:id="@+id/presentPW"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -110,6 +111,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
                 <EditText
+                    android:id="@+id/newPW"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
@@ -137,6 +139,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
                 <EditText
+                    android:id="@+id/newPW2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
@@ -156,6 +159,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/reset_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
