--- a/app/src/main/res/layout/activity_gonggu_writing.xml
+++ b/app/src/main/res/layout/activity_gonggu_writing.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/hello"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <CheckBox
@@ -92,7 +92,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/whiteblue">
 
                 <EditText
@@ -124,9 +124,10 @@
 
             <LinearLayout
                 android:layout_width="350dp"
-                android:layout_height="50dp"
+                android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:background="@drawable/button_round"
                 android:orientation="horizontal">
 
                 <TextView
@@ -135,18 +136,91 @@
                     android:gravity="center"
                     android:text="제품명"
                     android:textColor="#3c567b"
-                    android:textSize="20dp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
 
                 <EditText
                     android:layout_gravity="center"
-                    android:background="@drawable/blue"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_marginStart="10dp" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_round"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="가격"
+                    android:textColor="#3c567b"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp" />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_round"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="인원수"
+                    android:textColor="#3c567b"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_round"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="오픈채팅 링크"
+                    android:textColor="#3c567b"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp" />
+
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
@@ -156,7 +230,6 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="15dp"
             android:background="@drawable/vivid_blue"
             android:gravity="center"
             android:text="글 등록"
