--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -48,7 +48,7 @@
                         android:id="@+id/user_img"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:src="@drawable/human"/>
+                        android:src="@drawable/cat"/>
                 </androidx.cardview.widget.CardView>
                 <ImageButton
                     android:layout_width="wrap_content"
