--- a/app/src/main/res/layout/activity_recipe_writing.xml
+++ b/app/src/main/res/layout/activity_recipe_writing.xml
@@ -65,15 +65,13 @@
                     android:layout_alignParentBottom="true"
                     android:background="@android:color/transparent"
                     android:src="@drawable/image" />
-                <TextView
+                <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="#카테고리"
+                    android:hint="#카테고리"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:textColor="#3c567b"/>
+                    />
 
             </RelativeLayout>
 
