--- a/app/src/main/res/layout/activity_leisure_writing.xml
+++ b/app/src/main/res/layout/activity_leisure_writing.xml
@@ -32,6 +32,7 @@
             android:orientation="vertical">
 
             <EditText
+                android:id="@+id/leisure_write_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -51,6 +52,7 @@
                 android:background="@drawable/whiteblue">
 
                 <EditText
+                    android:id="@+id/leisure_write_body"
                     android:layout_width="match_parent"
                     android:layout_height="430dp"
                     android:gravity="top"
@@ -63,15 +65,13 @@
                     android:layout_alignParentBottom="true"
                     android:background="@android:color/transparent"
                     android:src="@drawable/image" />
-                <TextView
+                <EditText
+                    android:id="@+id/leisure_write_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="#카테고리"
+                    android:hint="#카테고리"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:textColor="#3c567b"/>
+                    android:layout_alignParentBottom="true" />
 
             </RelativeLayout>
             <LinearLayout
@@ -177,6 +177,7 @@
 
 
         <Button
+            android:id="@+id/leisure_write_BTN"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
@@ -184,9 +185,9 @@
             android:background="@drawable/vivid_blue"
             android:gravity="center"
             android:text="글 등록"
-            android:textSize="23dp"
             android:textColor="#3c567b"
-            android:textStyle="bold"/>
+            android:textSize="23dp"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
