--- a/app/src/main/res/layout/activity_recipe_writing.xml
+++ b/app/src/main/res/layout/activity_recipe_writing.xml
@@ -66,6 +66,7 @@
                     android:background="@android:color/transparent"
                     android:src="@drawable/image" />
                 <EditText
+                    android:id="@+id/recipe_write_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="#카테고리"
