--- a/app/src/main/res/layout/fragment_home3.xml
+++ b/app/src/main/res/layout/fragment_home3.xml
@@ -48,95 +48,10 @@
                 android:backgroundTint="#3c567b"
                 android:drawableLeft="@drawable/search"/>
 
-            <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@drawable/pink_page">
-                <TextView
-                    android:layout_marginStart="5dp"
-                    android:id="@+id/tag"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="식품"
-                    android:textStyle="bold"
-                    android:textColor="#B0B0B0"/>
-                <ImageView
-                    android:id="@+id/playing_post_heart"
-                    android:layout_marginEnd="10dp"
-                    android:layout_toStartOf="@id/star"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/heart"/>
-                <ImageView
-                    android:id="@+id/star"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/star_blank"/>
-                <TextView
-                    android:layout_below="@id/playing_post_heart"
-                    android:layout_alignLeft="@id/playing_post_heart"
-                    android:layout_alignRight="@id/playing_post_heart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10개"
-                    android:textSize="10dp"
-                    android:textStyle="bold"
-                    android:textColor="#3c567b" />
-
-                <ImageView
-                    android:layout_marginStart="5dp"
-                    android:id="@+id/tag_img"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_below="@+id/tag"
-                    android:src="@drawable/tissue" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="햇반 2종 210g(백미5 + 흑미5)"
-                    android:textColor="#3c567b"
-                    android:textStyle="bold"
-                    android:layout_marginStart="100dp"
-                    android:layout_marginTop="45dp"/>
-                <ImageView
-                    android:id="@+id/dashline"
-                    android:layout_width="250dp"
-                    android:layout_height="5dp"
-                    android:src="@drawable/drawable_dash_line"
-                    android:layout_marginStart="100dp"
-                    android:layout_marginTop="70dp"/>
-                <ImageView
-                    android:id="@+id/people_img"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/people"
-                    android:layout_alignStart="@id/dashline"
-                    android:layout_below="@id/dashline"/>
-                <TextView
-                    android:id="@+id/people_count"
-                    android:layout_marginStart="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1/5"
-                    android:textColor="#3c567b"
-                    android:textStyle="bold"
-                    android:layout_toRightOf="@id/people_img"
-                    android:layout_alignBottom="@id/people_img"
-                    android:layout_marginBottom="4dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="고냥이사랑"
-                    android:textColor="#3c567b"
-                    android:textStyle="bold"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignBaseline="@id/people_count"/>
-            </RelativeLayout>
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home3_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
 
