--- a/app/src/main/res/layout/activity_gonggu_writing.xml
+++ b/app/src/main/res/layout/activity_gonggu_writing.xml
@@ -32,6 +32,7 @@
             android:orientation="vertical">
 
             <EditText
+                android:id="@+id/gonggu_write_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -96,6 +97,7 @@
                 android:background="@drawable/whiteblue">
 
                 <EditText
+                    android:id="@+id/gonggu_write_body"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:background="@null"
@@ -110,15 +112,13 @@
                     android:background="@android:color/transparent"
                     android:src="@drawable/image" />
 
-                <TextView
+                <EditText
+                    android:id="@+id/gonggu_write_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:text="#카테고리"
-                    android:textColor="#3c567b"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:hint="#카테고리" />
 
             </RelativeLayout>
 
@@ -140,6 +140,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/gonggu_write_itemName"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -165,6 +166,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/gonggu_write_price"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -189,6 +191,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/gonggu_write_peopleCount"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -213,6 +216,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/gonggu_write_chatLink"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -226,6 +230,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/gonggu_write_BTN"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
