--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -8,6 +8,7 @@
     android:clickable="true"
     android:padding="20dp">
     <RelativeLayout
+        android:layout_marginBottom="80dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
