--- a/app/src/main/res/layout/fragment_home3.xml
+++ b/app/src/main/res/layout/fragment_home3.xml
@@ -10,6 +10,7 @@
 
 
     <RelativeLayout
+        android:layout_marginBottom="80dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
