home2(공구 비대면)+체크박스

--- a/app/src/main/res/layout/activity_gonggu_writing.xml
+++ b/app/src/main/res/layout/activity_gonggu_writing.xml
@@ -50,6 +50,7 @@
                 android:orientation="horizontal">
 
                 <CheckBox
+                    android:id="@+id/gonggu_face_checkBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
@@ -58,6 +59,7 @@
                     android:textStyle="bold" />
 
                 <CheckBox
+                    android:id="@+id/gonggu_deli_checkBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
