home 1,2,3 게시물 사진 하나 보임&프로필 사진

--- a/app/src/main/res/layout/activity_gonggu_writing.xml
+++ b/app/src/main/res/layout/activity_gonggu_writing.xml
@@ -108,6 +108,7 @@
 
 
                 <ImageButton
+                    android:id="@+id/gonggu_write_imgBTN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
