--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -40,22 +40,11 @@
             android:textSize="10dp"
             android:textStyle="bold"
             android:textColor="#3c567b" />
-        <androidx.cardview.widget.CardView
-            android:id="@+id/tag_img"
-            android:layout_gravity="center"
-            android:layout_below="@+id/category"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="6dp"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/img"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/test" />
-        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/orange" />
 
         <TextView
             android:id="@+id/title"
