--- a/app/src/main/res/drawable/yellowbtn_background.xml
+++ b/app/src/main/res/drawable/yellowbtn_background.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="150dp"/>
     <solid android:color="#FFEBB9"/>
+    <padding android:left="2dp"  android:right="2dp"/>
+
 
 </shape>
