--- a/app/src/main/res/layout/item09_1.xml
+++ b/app/src/main/res/layout/item09_1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
@@ -40,14 +41,23 @@
             android:textStyle="bold"
             android:textColor="#3c567b" />
 
-        <ImageView
-            android:layout_marginStart="5dp"
-            android:id="@+id/img"
-            android:layout_marginTop="10dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/tag_img"
+            android:layout_gravity="center"
             android:layout_below="@+id/category"
-            android:src="@drawable/yellow" />
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="6dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/yellow_page" />
+        </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
