커뮤1 & 질문글 체크까지 완성

--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -32,6 +32,7 @@
             android:orientation="vertical">
 
             <EditText
+                android:id="@+id/community_write_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -49,6 +50,7 @@
                 android:orientation="horizontal">
 
                 <CheckBox
+                    android:id="@+id/community_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
@@ -87,6 +89,7 @@
                 android:background="@drawable/whiteblue">
 
                 <EditText
+                    android:id="@+id/community_write_body"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:gravity="top"
@@ -106,6 +109,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/community_write_BTN"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
