--- a/app/src/main/res/layout/activity_post_inside_recipe.xml
+++ b/app/src/main/res/layout/activity_post_inside_recipe.xml
@@ -121,13 +121,14 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
                             android:src="@drawable/heartcount" />
 
                         <TextView
@@ -146,9 +147,10 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/heart_recipe_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@drawable/heartcount" />
+                            android:src="@drawable/heart" />
 
                         <ImageView
                             android:layout_width="20dp"
